cmake_minimum_required(VERSION 3.16)
project(1500)

set(CMAKE_CXX_STANDARD 14)

add_executable(1500
        Implementation/1.cpp
        Implementation/2.cpp
        Implementation/3.cpp
        Implementation/4.cpp
        Implementation/5.cpp
        Implementation/6.cpp
        Implementation/a.cpp
        Implementation/b.cpp
        Implementation/c.cpp
        Implementation/d.cpp
        Implementation/e.cpp
        Implementation/stringA.cpp
        Implementation/stringB.cpp
        Implementation/stringC.cpp
        Implementation/stringD.cpp
        Implementation/stringE.cpp
        Implementation/test.cpp
        Implementation/vasya_golden_ticket.cpp
        1002.cpp
        1025.cpp
        172A.cpp
        172B.cpp
        172C.cpp
        2D_segment_tree.cpp
        633A.cpp
        633B.cpp
        633C.cpp
        635A.cpp
        635B.cpp
        635C.cpp
        636A.cpp
        636B.cpp
        636C.cpp
        636D.cpp
        636E.cpp
        637A.cpp
        637B.cpp
        637C.cpp
        638A.cpp
        638B.cpp
        638C.cpp
        638D.cpp
        639A.cpp
        639B.cpp
        639C.cpp
        640A.cpp
        640B.cpp
        640C.cpp
        640D.cpp
        640E.cpp
        640F.cpp
        640G.cpp
        642A.cpp
        642B.cpp
        642C.cpp
        642D.cpp
        642E.cpp
        642F.cpp
        643A.cpp
        643B.cpp
        643C.cpp
        643D.cpp
        644A.cpp
        644B.cpp
        644C.cpp
        645A.cpp
        645B.cpp
        645C.cpp
        645D.cpp
        646A.cpp
        646B.cpp
        646C.cpp
        647A.cpp
        647B.cpp
        647C.cpp
        648A.cpp
        648B.cpp
        648C.cpp
        648D.cpp
        649A.cpp
        649B.cpp
        650A.cpp
        650B.cpp
        650C.cpp
        651A.cpp
        651B.cpp
        651C.cpp
        652A.cpp
        652B.cpp
        652C.cpp
        653A.cpp
        653B.cpp
        653C.cpp
        653D.cpp
        85A.cpp
        85B.cpp
        85C.cpp
        87A.cpp
        87B.cpp
        87C.cpp
        87D.cpp
        88A.cpp
        88B.cpp
        88C.cpp
        88D.cpp
        89A.cpp
        89B.cpp
        89C.cpp
        89D.cpp
        90A.cp
        90B.cpp
        90C.cpp
        A.cpp
        A_and_B.cpp
        a_b_matrix.cpp
        ABC155.cpp
        ABC156.cpp
        ABC157.cpp
        ABC163A.cpp
        ABC163B.cpp
        ABC163C.cpp
        ABC163E.cpp
        ABC170A.cpp
        ABC170B.cpp
        ABC170C.cpp
        ABC170D.cpp
        AbcA.cpp
        AbcC.cpp
        add_or_not.cpp
        adding_reverse_num.cpp
        AFC045A.cpp
        AGC045B.cpp
        air_condititon.cpp
        alchemist.cpp
        almost_arithmetic_progression.cpp
        almost_arithmetical_progression.cpp
        alternating_character.cpp
        and_operation.cpp
        anu_has_function.cpp
        anya_ghost.cpp
        apartment.cpp
        apple_division.cpp
        appy_contest.cpp
        area8.cpp
        arena10.cpp
        arena11.cpp
        arena12.cpp
        arena13.cpp
        arena15.cpp
        arena16.cpp
        arena17.cpp
        arena18.cpp
        arena19.cpp
        arena20.cpp
        arena21.cpp
        arena22.cpp
        arena23.cpp
        arena25.cpp
        arena27.cpp
        arena28.cpp
        arena6.cpp
        arena7.cpp
        arena9.cpp
        Arithmetic_progression.cpp
        arrange_students.cpp
        array.cpp
        array_description.cpp
        array_division.cpp
        array_splitting.cpp
        array_transform.cpp
        as_simple_as_one_two.cpp
        B.cpp
        badge.cpp
        ballons.cpp
        barcode.cpp
        basketball_exercise.cpp
        bear_and_finding_criminal.cpp
        bear_frndship.cpp
        bear_poker.cpp
        bear_prime_100.cpp
        bear_prime_number.cpp
        bear_raspberry.cpp
        bear_steady_game.cpp
        bear_strings.cpp
        beautiful_set_point.cpp
        bertown.cpp
        big_mod.cpp
        bigger_is_greater.cpp
        billard.cpp
        binary_xor.cpp
        binomial_coefficient.cpp
        biologist.cpp
        bipartite.cpp
        birthday_present.cpp
        bit++.cpp
        bit_strings.cpp
        black_white_painting.cpp
        blackjack.cpp
        bombs.cpp
        bon_appetit.cpp
        book_shop.cpp
        book_worm.cpp
        booking_system.cpp
        boxers.cpp
        brackets.cpp
        brownie_points.cpp
        building_roads.cpp
        building_teams.cpp
        bulbs.cpp
        burglar_matches.cpp
        burning_midnight_oil.cpp
        buying_new_substring.cpp
        buying_shovels.cpp
        C.cpp
        cache_hit.cpp
        caisa_pylons.cpp
        candies.cpp
        candy_box.cpp
        case_of_zero_one.cpp
        ceasar_legion.cpp
        charging.cpp
        chat_online.cpp
        checkpoints.cpp
        chef_adventures.cpp
        chef_and_string.cpp
        chef_bitwise_product.cpp
        chef_counting.cpp
        chef_demonestation.cpp
        chef_digit_jumps.cpp
        chef_frogs.cpp
        chef_good_subsequence.cpp
        chef_got_recipe.cpp
        chef_icecream.cpp
        chef_number.cpp
        chef_price_control.cpp
        chef_rotation.cpp
        chef_semi_primes.cpp
        chef_square.cpp
        chef_string.cpp
        chef_subset.cpp
        chef_sum.cpp
        chef_weird_queries.cpp
        chessboard_queen.cpp
        child_toy.cpp
        chocolate.cpp
        chritmas_party.cpp
        ciel_dancing.cpp
        ciel_flower.cpp
        cinema_line.cpp
        cloudy_day.cpp
        codejam1Ba.cpp
        codejam1Bb.cpp
        codejam1Bc.cpp
        codejam1CA.cpp
        codejam1CB.cpp
        coffee_coursework.cpp
        coin_combination_I.cpp
        coin_combination_II.cpp
        coin_piles.cpp
        coins.cpp
        color_stripe.cpp
        combination.cpp
        combinations.cpp
        common_child.cpp
        common_divisor.cpp
        comparator.cpp
        compilation_error.cpp
        complete_game.cpp
        concert_ticket.cpp
        consecutive_subsequence.cpp
        Constanze_machine.cpp
        continent.cpp
        convert_string.cpp
        corona_spread.cpp
        cound_triplet.cpp
        count_kprime.cpp
        count_subarray.cpp
        count_subrectangles.cpp
        count_substring.cpp
        counting_divisor.cpp
        counting_kangaroo.cpp
        counting_rooms.cpp
        course_scheduling.cpp
        covid_sampling.cpp
        cow_poker_game.cpp
        creating_contest.cpp
        creating_string_II.cpp
        creating_strings.cpp
        culprit.cpp
        cutting.cpp
        cycle_detection.cpp
        cycle_finding.cpp
        cyclic_component.cpp
        day1.cpp
        Day1A.cpp
        Day1C.cpp
        Day1D.cpp
        Day1E.cpp
        Day2A.cpp
        Day2B.cpp
        Day2C.cpp
        Day2D.cpp
        Day3C.cpp
        decoding.cpp
        delivery_man.cpp
        destroy_hotel.cpp
        detective_s.cpp
        devu_dumb_guy.cpp
        dice_combination.cpp
        digit_length_sum.cpp
        dima_staircase.cpp
        distinct_number.cpp
        distributing_apples.cpp
        div3A.cpp
        div3B.cpp
        div3C.cpp
        div3D.cpp
        div_game.cpp
        diverse_garland.cpp
        diverse_string.cpp
        divide_3_mul_2.cpp
        division_team.cpp
        drazil_date.cpp
        drazil_factorial.cpp
        dreamon_wifi.cpp
        drunk_jailer.cpp
        duff_love.cpp
        easy_fibonnaci.cpp
        easy_math.cpp
        ecological.cpp
        edit_distance.cpp
        elections.cpp
        electricity.cpp
        elephant_problem.cpp
        elephant_tshirt.cpp
        EllysConjectureDiv2.cpp
        encryption.cpp
        escape.cpp
        escape_one.cpp
        escape_stone.cpp
        eugene_array.cpp
        euron_problem.cpp
        even_matrix.cpp
        everyone_winnner.cpp
        exams.cpp
        exponentation.cpp
        extended_gcd,cpp.cpp
        factor_tree.cpp
        factory_machines.cpp
        fadi_lcm.cpp
        fancy_fence.cpp
        fantasy_league.cpp
        feasible_relation.cpp
        fenwick_tree.cpp
        ferris_wheel.cpp
        fibonacci_num.cpp
        fight_monster.cpp
        filename.cpp
        filya_homework.cpp
        find_the_duplicate_number.cpp
        finding_bridges.cpp
        fire_escape_route.cpp
        fixing_typos.cpp
        flight_discount.cpp
        flight_route.cpp
        flip_coins.cpp
        flowers.cpp
        forming_teams.cpp
        fox_box.cpp
        fox_dots.cpp
        friend_gifts.cpp
        frog1.cpp
        frog2.cpp
        game_outcome.cpp
        game_routes.cpp
        garbage.cpp
        gargari_bishop.cpp
        george_Accommodation.cpp
        george_job.cpp
        Global8B.cpp
        Global8C.cpp
        Gobal8A.cpp
        good_number.cpp
        good_numbers.cpp
        goodland_city.cpp
        gravel.cpp
        greedy_florist.cpp
        grid_path.cpp
        grid_paths.cpp
        group_of_students.cpp
        growing_mushroom.cpp
        guessing_game.cpp
        hacking_cypher.cpp
        hamburgers.cpp
        hanker_chief.cpp
        hard_problem.cpp
        high_score.cpp
        highest_value_palindrome.cpp
        history.cpp
        hometask.cpp
        illya_queries.cpp
        in_out_time.cpp
        increasing_array.cpp
        increasing_decreasing.cpp
        inna_new_matrix_candies.cpp
        insearch_of_easy.cpp
        inversion_count.cpp
        inversion_permutations.cpp
        investigation.cpp
        iou.cpp
        is_it_tree.cpp
        isolation_centers.cpp
        it_should_palindrome.cpp
        jeff_periods.cpp
        jewel_game.cpp
        journy_plan.cpp
        joysticks.cpp
        just_eat_it.cpp
        k_price_of_one.cpp
        kcomplete_word.cpp
        kconcatenation.cpp
        kefa_first_step.cpp
        kickstart1c_candies.cpp
        kickstart1c_countdown.cpp
        kickstart1c_perfect_subarray.cpp
        king_path.cpp
        knapsack1.cpp
        knapsack2.cpp
        knight_moves.cpp
        koyla_tanya.cpp
        kprime.cpp
        ksuhsa_array.cpp
        kth_divisor.cpp
        kuroni_impossible_calculation.cpp
        labyrinth.cpp
        ladder.cpp
        laptops.cpp
        lca_binary_lifting.cpp
        lcm.cpp
        lcm_challenge.cpp
        lcs.cpp
        leader_board.cpp
        learning_graph.cpp
        less_equal.cpp
        letters.cpp
        lift_request.cpp
        light_more_light.cpp
        line_cashier.cpp
        little_dima_equation.cpp
        little_frog.cpp
        little_girl_game.cpp
        llya_bank_account.cpp
        longest_flight_route.cpp
        longest_increasing_subsequence.cpp
        longest_path.cpp
        longest_regular_bracket_sequence.cpp
        longest_subsequence.cpp
        lose_it.cpp
        lost_array.cpp
        lost_numbers.cpp
        lost_weekend.cpp
        love_rescue.cpp
        lucky_number.cpp
        lucky_string.cpp
        lucky_substring.cpp
        lucky_sum_digit.cpp
        lucky_ticket.cpp
        lunar_year_wander.cpp
        lybrinth.cpp
        mafia.cpp
        magic_spheres.cpp
        magic_square.cpp
        magical_array.cpp
        make_good.cpp
        maketree.cpp
        marbales.cpp
        marbles.cpp
        marcus.cpp
        marvolo_gaunt_ring.cpp
        mashmokh_acm.cpp
        Mashmokh_numbers.cpp
        Mashup1.cpp
        Mashup1A.cpp
        Mashup1B.cpp
        matrix_decomposition.cpp
        max_min.cpp
        max_pair_seg_tree.cpp
        maximal_independent_set.cpp
        maximize_sum.cpp
        maximum_median.cpp
        maximum_size_of_set.cpp
        maximum_subarray_II.cpp
        maximum_subarray_sum.cpp
        maximum_xor.cpp
        mayhem_again.cpp
        maze.cpp
        meeting.cpp
        message_route.cpp
        min_seg_tree.cpp
        minimize_permutation.cpp
        minimizing_coins.cpp
        minimum_triangulation.cpp
        misha_forest.cpp
        missing_number.cpp
        mixi_game.cpp
        mixtures.cpp
        mo_unqiue_el.cpp
        money_sums.cpp
        monk_and_search.cpp
        monk_balanced_paranthese.cpp
        monk_checkpoint.cpp
        monk_circular_distance.cpp
        monk_encounter_polynomial.cpp
        monk_graph.cpp
        monk_island.cpp
        monk_mountain.cpp
        monk_new_array.cpp
        monk_number.cpp
        monk_operation.cpp
        monk_special_intger.cpp
        monk_takes_a_walk.cpp
        monk_watching_fight.cpp
        monster.cpp
        moony_icpc.cpp
        Motarack_birthday.cpp
        movie_festival.cpp
        movie_festival_II.cpp
        multiples_3.cpp
        multiplication_2.cpp
        multiplication_3.cpp
        multiplication_table.cpp
        nanobots.cpp
        nanobots2.0.cpp
        national_project.cpp
        nearest_smaller_val.cpp
        neko_maze_game.cpp
        new_keyboard.cpp
        news_distribution.cpp
        next_palind.cpp
        next_test.cpp
        no_factors.cpp
        non_divisible_subset.cpp
        not_real_problem.cpp
        np_hard_problem.cpp
        number_spiral.cpp
        obtain_string.cpp
        olesya_rodion.cpp
        one_dimension_kingdom.cpp
        operation_on_tuple.cpp
        opposite_attack.cpp
        optimal_network_routing.cpp
        or_in_matrix.cpp
        orac_factor.cpp
        orac_lcm.cpp
        orac_models.cpp
        ordering_tasks.cpp
        overlapping_rectangle.cpp
        pairs.cpp
        pairwise_and.cpp
        palindrome_reorder.cpp
        Palindrome_transformation.cpp
        palindromic_matrix.cpp
        parallel_resistor.cpp
        parity_alternated_deletion.cp
        parity_alternated_deletion.cpp
        password.cpp
        penguin_matrix.cpp
        per_capita_income.cpp
        perfect_keyboard.cpp
        perfect_number.cpp
        perfect_team.cpp
        periodic_number.cpp
        permutations.cpp
        petr_combination_lock.cpp
        petya_countryside.cpp
        PI.cpp
        pipeline.cpp
        pipes.cpp
        playboy_chimp.cpp
        playlist.cpp
        pocket_box.cpp
        points_in_figure.cpp
        points_on_line.cpp
        polandball_game.cpp
        polland_forest.cpp
        polo_penguin.cpp
        polycarp_ribbon.cpp
        polygon.cpp
        positive_mex.cpp
        postering.cpp
        power_of_two.cpp
        powerfull_array.cpp
        prefessor_trip.cpp
        preparing_olympiad.cpp
        president_office.cpp
        prime_factorization.cpp
        prime_path.cpp
        printing_pattern.cpp
        product.cpp
        professor_trip.cpp
        projects.cpp
        Pythagorean_triple.cpp
        quasibinary.cpp
        queen_attack_II.cpp
        queue.cpp
        queue_bus_stop.cpp
        random_team.cpp
        range_minimum_queriesI.cpp
        range_minimum_query.cpp
        range_query_sum.cpp
        range_xor_queries_update.cpp
        range_xor_update.cpp
        rank_list.cpp
        rational_resistance.cpp
        reading_books.cpp
        ready_bitwise.cpp
        registration_system.cpp
        removal_game.cpp
        remove_duplicates.cpp
        remove_one_element.cpp
        removing_column.cpp
        removing_digit.cpp
        repeat_missing.cpp
        repetitions.cpp
        rerouting.cpp
        restoring_permutation.cpp
        restraunt_customers.cpp
        robot_walking.cpp
        roll_call.cpp
        roma_changing_sign.cpp
        roman_calculation.cpp
        roman_lost_number.cpp
        roman_paradox.cpp
        roman_passes_prom.cpp
        roman_summer_vacation.cpp
        room_allocation.cpp
        root_problem.cpp
        round_trip.cpp
        round_trip_II.cpp
        rumor.cpp
        saif.cpp
        santa.cpp
        seasonal_war.cpp
        sequence.cpp
        seraja_coat.cpp
        seraja_votes.cpp
        sherlock_anagram.cpp
        sherlock_valid_string.cpp
        shift_string.cpp
        shortage.cpp
        shortest_route_I.cpp
        shortest_route_II.cpp
        shuffle.cpp
        sigma_horror.cpp
        simple_game.cpp
        simple_operations.cpp
        simple_string.cpp
        singhal_broken_keyboard.cpp
        singhal_equality.cpp
        singhal_gcd.cpp
        singhal_missing_number.cpp
        singhal_number.cpp
        singhal_swap.cpp
        sinking_ship.cpp
        size_of_subtree.cpp
        skyscraper.cpp
        sleepy_game.cpp
        sliding_cost.cpp
        sliding_median.cpp
        smallest_regular.cpp
        social_networking.cpp
        soldier_card.cpp
        sort_0_1_2.cpp
        sort_array.cpp
        sort_the_sequence.cpp
        sorting.cpp
        sorting_vases.cpp
        sorting_vases2.0.cpp
        sorting_vases3.0.cpp
        spit_problem.cpp
        spoj_eko.cpp
        spy_string.cpp
        square_subs.cpp
        SSSP.cpp
        stacks.cpp
        steps.cpp
        stick_length.cpp
        string_anagram.cpp
        string_modification.cpp
        stripe.cpp
        student_shoelaces.cpp
        subarray_divisibilty.cpp
        subarray_sum_II.cpp
        subarray_sumI.cpp
        subtraction_game.cpp
        suffix_structure.cpp
        sum_of_digits.cpp
        sum_of_divisor.cpp
        sum_of_four.cpp
        sum_of_square_seg_tree.cpp
        sum_of_three.cpp
        sum_of_two_val.cpp
        super_hashing.cpp
        swap_adjacent_elements.cpp
        swap_digit.cpp
        sweets_eating.cpp
        table.cpp
        table_chair.cpp
        tanya_candies.cpp
        tape.cpp
        task_deadlines.cpp
        taxes.cpp
        taxi.cpp
        team.cpp
        team_training.cpp
        test.cpp
        Tetrahedron.cpp
        the_grid_search.cpp
        theatre_square.cpp
        three_display.cpp
        tic_tac_toe_I.cpp
        tic_tac_toe_II.cpp
        Timofey_tree.cpp
        tom_jerry_game.cpp
        tower_of_hanoi.cpp
        towers.cpp
        trailing_zeros.cpp
        treasure_hunt.cpp
        tree_difference.cpp
        tree_query.cpp
        triangle.cpp
        tricky_deal.cpp
        triple_sort.cpp
        tuple.cpp
        tuple2.cpp
        two_arrays.cpp
        two_bags_potatoes.cpp
        two_gram.cpp
        two_knights.cpp
        two_seals.cpp
        two_set_II.cpp
        two_sets.cpp
        two_string.cpp
        two_substrings.cpp
        unavilable.cpp
        uniform_generator.cpp
        unusal_competition.cpp
        vacation.cpp
        vacations.cpp
        valera_plate.cpp
        valera_tubes.cpp
        valera_x.cpp
        vanya_exam.cpp
        vanya_laterns.cpp
        vanya_table.cpp
        vasya_cornfield.cpp
        vasya_digital_root.cpp
        vasya_petya_game.cpp
        vasya_public_transport.cpp
        vasya_robot.cpp
        vasya_string.cpp
        vasya_wrestling.cpp
        warriors.cpp
        wasted_time.cpp
        watchmen.cpp
        water_buying.cpp
        weird_algorithm.cpp
        weird_walk.cpp
        weirdsort.cpp
        wet_shark.cpp
        wood_cutters.cpp
        woodcutter.cpp
        worm_evolution.cpp
        worms.cpp
        wrong_subtraction.cpp
        xenia_colorful_gems.cpp
        xenia_weight.cpp
        xor_problem.cpp
        xor_tree.cpp
        yet_another_broken_keyboard.cpp
        yet_another_counting_problem.cpp
        zero_array.cpp
        Zmei_Gorynich.cpp)
